--- a/Interview_preparation/first.ipynb
+++ b/Interview_preparation/first.ipynb
@@ -198,10 +198,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Remove duplicate from  a give string?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "string=\"my name is sunil. I am teaching data scinece\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['u',\n",
+       " 'n',\n",
+       " 'h',\n",
+       " ' ',\n",
+       " 'e',\n",
+       " 'g',\n",
+       " 'y',\n",
+       " '.',\n",
+       " 'd',\n",
+       " 'i',\n",
+       " 'l',\n",
+       " 'c',\n",
+       " 's',\n",
+       " 'I',\n",
+       " 'a',\n",
+       " 't',\n",
+       " 'm']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(string))\n",
+    "# but this does not give string as answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
